--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -8,7 +8,7 @@
     flex-direction: row;
     justify-content:space-between;
     padding: 30px 50px;
-    background-color: aliceblue;
+    background-color: #fefefe;
 }
 
 .footer-left {
