--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -2,3 +2,87 @@
     font-family: "Lora-Regular";
     src: url("../../public//font/Lora/Lora-Regular.ttf") format("truetype");
 }
+
+@font-face {
+    font-family: "LibreBodoni-Bold";
+    src: url("../../public//font/Libre_Bodoni/LibreBodoni-Bold.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "GmarketSans-Medium";
+    src: url("../../public//font/GmarketSansTTF/GmarketSansTTFMedium.ttf") format("truetype");
+}
+
+/*QuickMenu.js*/
+.quickMenu-container {
+    width: min(1100px, 100%);
+    margin: 0 auto;
+    display: flex;
+    gap: 40px;
+    padding: 80px 40px;
+}
+
+.go-to-project,
+.go-to-about {
+    flex: 1;
+    box-sizing: border-box;
+    width: 100%;
+    min-height: 220px;
+    padding: 26px 30px;
+    border-radius: 18px;
+
+    background: rgba(255, 255, 255, 0.1);
+    border: 1px solid #d9d9d9;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    transition: transform 180ms ease, 
+    box-shadow 180ms ease, 
+    border-color 180ms ease;
+    transform-origin: center;
+}
+
+.go-to-project:hover,
+.go-to-about:hover {
+    transform: scale(1.03);
+    box-shadow: 0 18px 50px rgba(0, 0, 0, 0.2);
+    border-color: #002870;
+}
+
+.menu-project-title,
+.menu-about-title {
+    font-family: "LibreBodoni-Bold";
+    font-size: 32px;
+    color: #343434;
+}
+
+.menu-project-exp,
+.menu-about-exp { 
+    font-family: "GmarketSans-Medium";
+    line-height: 1.5;
+    color: #343434;
+}
+
+.menu-project-detail p,
+.menu-about-detail p {
+    font-family: "GmarketSans-Medium";
+
+    display: inline-flex;
+    align-items: center;
+    border-radius: 990px;
+
+    border: 6px solid #343434;
+    background: #343434;
+    color: #f2f2f2;
+
+    transition: background 180ms ease, border-color 180ms ease;
+}
+
+.menu-project-detail p:hover,
+.menu-about-detail p:hover {
+    border: 6px solid #002870;
+    background: #002870;  
+    cursor: pointer; 
+} 
