--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -6,9 +6,11 @@
 .footer-container {
     display: flex;
     flex-direction: row;
-    justify-content:space-between;
     padding: 30px 50px;
     background-color: #fefefe;
+    justify-content: center;
+    gap: 30px;
+    box-shadow: 0 -1px 0 rgba(0,0,0,0.08);
 }
 
 .footer-left {
